body overflow-x fix

--- a/front/style/style.css
+++ b/front/style/style.css
@@ -16,6 +16,7 @@ body {
   background-color:#fff;
   color:#000;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body::scrollbar {
